fix bug when displaying concepts with no ILI, make relation names vertically align

--- a/omw/static/css/gwg.css
+++ b/omw/static/css/gwg.css
@@ -226,6 +226,11 @@ span.pos {
 span.lang {
     font-variant: small-caps
 }
+/* for displaying relation anmes */
+th.rel {
+    vertical-align:top;
+}
+
 span.rel {
     font-variant: small-caps
 }
